# backup-scripts

./: .gitignore  CHANGELOG.md  README.md
rust/bday_reminder/: Cargo.toml
rust/bday_reminder/src/: consts.rs  main.rs  structs.rs
rust/dns_checker/: Cargo.toml
rust/dns_checker/src/: consts.rs  main.rs
scripts/: backup-mail.sh  backup-web-logs.sh  update-geo-ip.sh  update-web-analytics.sh
